--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 	src: url('/Poppins-Regular.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
+	font-display: swap;
 }
 
 /* Track */
