implemented New Designs

--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,32 @@
 @tailwind utilities;
 @tailwind components;
 
-@font-face {
-	font-family: 'Poppins';
-	src: url('/Poppins-Regular.ttf') format('truetype');
-	font-weight: normal;
-	font-style: normal;
+/* :root {
+	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+	line-height: 1.5;
+	font-weight: 400;
+
+	color-scheme: light dark; */
+/* color: rgba(255, 255, 255, 0.87);
+
+	font-synthesis: none;
 	font-display: swap;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-text-size-adjust: 100%;
 }
 
-/* Track */
+body {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	position: relative;
+	width: 100vw;
+	height: 100vh;
+	overflow: hidden;
+}
+
 ::-webkit-scrollbar {
 	background: transparent;
 	width: 0.4rem;
@@ -18,27 +35,15 @@
 	border-radius: 1rem;
 }
 
-/* Handle */
+Handle
 ::-webkit-scrollbar-thumb {
-	border-radius: 5px; /* Rounded corners */
+	border-radius: 5px;
 	background: rgb(233, 6, 184);
 }
 
-/* Handle on hover */
+Handle on hover
 ::-webkit-scrollbar-thumb:hover {
 	background: rgb(233, 6, 184);
-}
-
-.login-bg {
-	background: rgba(0, 0, 0, 0.92);
-}
-
-:-webkit-autofill {
-	-webkit-background-color: transparent !important;
-	background-color: transparent !important;
-	-webkit-text-fill-color: white !important;
-	color: white !important;
-	background: transparent !important;
 }
 
 ::selection {
@@ -48,3 +53,4 @@
 ::-moz-selection {
 	@apply bg-pink-600 text-white rounded-xl;
 }
+ */
