--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@
 	line-height: 1.5;
 	font-weight: 400;
 
-	color-scheme: light dark; */
-/* color: rgba(255, 255, 255, 0.87);
+	color-scheme: light dark;
+	color: rgba(255, 255, 255, 0.87);
 
 	font-synthesis: none;
 	font-display: swap;
@@ -16,16 +16,20 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-text-size-adjust: 100%;
-}
+} */
 
-body {
+/* body {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	position: relative;
-	width: 100vw;
-	height: 100vh;
-	overflow: hidden;
+} */
+
+@font-face {
+	font-family: 'Poppins';
+	src: url('/Poppins-Regular.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+	font-display: swap;
 }
 
 ::-webkit-scrollbar {
@@ -35,13 +39,13 @@ body {
 	border-radius: 1rem;
 }
 
-Handle
+/* Handle */
 ::-webkit-scrollbar-thumb {
 	border-radius: 5px;
 	background: rgb(233, 6, 184);
 }
 
-Handle on hover
+/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
 	background: rgb(233, 6, 184);
 }
@@ -53,4 +57,3 @@ Handle on hover
 ::-moz-selection {
 	@apply bg-pink-600 text-white rounded-xl;
 }
- */
