created editProfile Modal

--- a/src/index.css
+++ b/src/index.css
@@ -2,28 +2,6 @@
 @tailwind utilities;
 @tailwind components;
 
-/* :root {
-	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-	line-height: 1.5;
-	font-weight: 400;
-
-	color-scheme: light dark;
-	color: rgba(255, 255, 255, 0.87);
-
-	font-synthesis: none;
-	font-display: swap;
-	text-rendering: optimizeLegibility;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	-webkit-text-size-adjust: 100%;
-} */
-
-/* body {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-} */
-
 @font-face {
 	font-family: 'Poppins';
 	src: url('/Poppins-Regular.ttf') format('truetype');
@@ -56,4 +34,8 @@
 
 ::-moz-selection {
 	@apply bg-pink-600 text-white rounded-xl;
+}
+
+input[type='file']::-webkit-file-upload-button {
+	@apply bg-pink-600 rounded-sm text-white outline-0 border-0 p-2;
 }
